--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,3 +20,7 @@ org.gradle.jvmargs=-Xmx1536m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
+# Java toolchain configuration
+org.gradle.java.installations.auto-detect=true
+org.gradle.java.installations.auto-download=true
