Add AI model files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,10 @@ Thumbs.db
 # Temporary files
 tmp/
 temp/
+
+# AI Model files (too large for git)
+*.task
+*.tflite
+*.bin
+src/assets/*.task
+android/app/src/main/assets/*.task
