pregnancy plan map

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     
     // MediaPipe LLM Inference for Gemma
     implementation 'com.google.mediapipe:tasks-genai:0.10.27'
+    
+    // ML Kit Text Recognition for OCR
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
 }
 
 apply from: 'capacitor.build.gradle'
