--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@google/generative-ai": "^0.24.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/lab": "^7.0.1-beta.21",
     "@mui/material": "^7.3.7",
     "@types/uuid": "^10.0.0",
     "date-fns": "^4.1.0",
