--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/filesystem": "^8.1.0",
     "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/toast": "^8.0.0",
+    "@capawesome/capacitor-app-shortcuts": "^8.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@google/generative-ai": "^0.24.1",
