sharing Image into app

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     
     // ML Kit Text Recognition for OCR
     implementation 'com.google.mlkit:text-recognition:16.0.0'
+    
+    // ML Kit Entity Extraction for dates, times, addresses, etc.
+    implementation 'com.google.mlkit:entity-extraction:16.0.0-beta5'
 }
 
 apply from: 'capacitor.build.gradle'
